syntax = "proto3";

package jwt;

// 获取token请求
message GetTokenRequest {
    string audience = 1;
    int64 exp = 2;
}

// 获取token返回
message GetTokenResponse {
    string token = 1;
}

service Token {
    rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {}
}